--- a/GHISLER/CONFIG/Shortcuts.ini
+++ b/GHISLER/CONFIG/Shortcuts.ini
@@ -1,24 +1,42 @@
 [Shortcuts]
-A+V=cm_SrcThumbs
-A+E=cm_Edit
-A+D=cm_Delete
-S+X=cm_PackFiles
-A+A=cm_PackFiles
 F2=cm_RenameOnly
 ESC=cm_ClearAll
-CS+C=cm_CopyFullNamesToClip
-S+UP=cm_GoToFirstFile
-S+RIGHT=cm_GotoNextDrive
-S+LEFT=cm_GotoPreviousDrive
-A+Q=cm_SearchFor
-C+R=cm_RereadSource
+
 A+Z=cm_SwitchHidSys
-CS+Q=em_startTCQSP
+;A+B=cm_Edit
+
+A+D=cm_Delete
+A+E=cm_Edit
+
+A+Q=cm_SearchFor
+;A+Q=cm_SearchStandalone
+;A+Q=cm_ShowQuickSearch
+;A+Q=cm_SrcQuickview
+
+
+A+V=cm_SrcThumbs
+
+S+X=cm_PackFiles
+A+A=cm_PackFiles
+A+.=command: explorer.exe 
+
+S+UP=cm_GoToFirstFile
+S+LEFT=cm_GotoPreviousDrive
+S+RIGHT=cm_GotoNextDrive
+
+CS+C=cm_CopyFullNamesToClip
+
+C+R=cm_RereadSource
+
+CA+F5=em_FastCopy
+CA+F6=em_FastMove
+
+CA+F1=em_gitBash
 
 
 
 [ShortcutsWin]
-S+C=em_FastCopy
-C+C=em_FastMove
+F5=em_FastCopy
+F6=em_FastMove
 
 
