--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,17 +1,17 @@
 
 [left]
-path=C:\Users\minhwasoo\AppData\Roaming\GHISLER\CONFIG\
-ViewMode=-1
+path=C:\Users\minhwasoo\AppData\Roaming\GHISLER\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
-SpecialView=0
+SpecialView=3
 show=1
 negative Sortorder=0
 activepanelcolordark=-1
 activepanelcolordark2=-1
 userspec=*.*
-sortorder=0
+customsortorder=0
 
 
 [right]
