--- a/GHISLER/CONFIG/Shortcuts.ini
+++ b/GHISLER/CONFIG/Shortcuts.ini
@@ -18,7 +18,6 @@ A+V=cm_SrcThumbs
 
 S+X=cm_PackFiles
 A+A=cm_PackFiles
-A+.=command: explorer.exe 
 
 S+UP=cm_GoToFirstFile
 S+LEFT=cm_GotoPreviousDrive
@@ -31,7 +30,9 @@ C+R=cm_RereadSource
 CA+F5=em_FastCopy
 CA+F6=em_FastMove
 
+CA+Q=em_startTCQSP
 CA+F1=em_gitBash
+CA+ENTER=em_open_folder
 
 
 
