--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -1,7 +1,7 @@
 [em_startTCQSP]
-cmd=%COMMANDER_PATH%\TCQSP\TCQSP.exe
+cmd=%commander_path%\TCqsp\TCqsp.exe
 param=%P
-button=C:\Program Files\totalcmd\TCqsp\TCQSP.exe
+button=%commander_path%\TCqsp\TCqsp.exe
 menu=Quick filter
 
 [em_FastCopy]
@@ -15,5 +15,18 @@ button=C:\Program Files\totalcmd\RunAsTool\FastCopy4.2.1_x64\FastCopy.exe,6
 cmd=c:\Program Files\totalcmd\RunAsTool\FastCopy4.2.1_x64\FastCopy.exe /auto_close /open_window /cmd=move /estimate
 param=%P%S /to="%T"
 menu=FastMove
+
+
+[em_gitBash]
+button=C:\Program Files\Git\git-bash.exe
+cmd=C:\Program Files\Git\git-bash.exe
+path=d:\12_dev\
+menu=git bash
+
+[em_open_folder]
+button=
+cmd=.
+menu=open folder
+
 
 
