--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -4,120 +4,122 @@ menu2=Program Files
 cmd2=cd c:\Program Files
 menu3=Program Files (x86)
 cmd3=cd c:\Program Files (x86)
-menu4=System32
-cmd4=cd c:\Windows\System32
-menu5=SendTo
-cmd5=cd C:\Users\minhwasoo\AppData\Roaming\Microsoft\Windows\SendTo
-menu6=AdobeGCClient
-cmd6=cd c:\Program Files (x86)\Common Files\Adobe\AdobeGCClient
-menu7=SeleniumBasic
-cmd7=cd c:\Program Files\SeleniumBasic
-menu8=VBA7.1
-cmd8=cd c:\Program Files\Microsoft Office\root\vfs\ProgramFilesCommonX64\Microsoft Shared\VBA\VBA7.1
-menu9=Desktop
-cmd9=cd c:\Users\minhwasoo\Desktop
-menu10=Documents
-cmd10=cd c:\Users\minhwasoo\Documents
-menu11=Downloads
-cmd11=cd c:\Users\minhwasoo\Downloads
-menu12=Pictures
-cmd12=cd c:\Users\minhwasoo\Pictures
-menu13=minhwasoo
-cmd13=cd c:\Users\minhwasoo
-menu14=Windows
-cmd14=cd c:\Windows
-menu15=color profile
-cmd15=cd c:\Windows\System32\spool\drivers\color
-menu16=WHPA
-cmd16=cd c:\WHPA
-menu17=AutoCAD 2021
-cmd17=cd c:\Program Files\Autodesk\AutoCAD 2021
-menu18=autocad 21 : Support & y
-cmd18=cd C:\Users\minhwasoo\AppData\Roaming\Autodesk\AutoCAD 2021\R24.0\enu\Support
-menu19=--
-menu20=-total commander
-menu21=totalcmd
-cmd21=cd C:\Program Files\totalcmd
-menu22=Total Commander ini
-cmd22=cd %COMMANDER_PATH%\ini
-menu23=Dos Batch File Example
-cmd23=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
-menu24=ini for minhwasoo
-cmd24=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
-menu25=inside TotalCmd GHISLER
-cmd25=cd %COMMANDER_PATH%\ini\GHISLER
-menu26=icons dll
-cmd26=cd %COMMANDER_PATH%\ini\icons dll
-menu27=RunAsTool
-cmd27=cd %COMMANDER_PATH%\RunAsTool
-menu28=98_Sordum
-cmd28=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
-menu29=99_NirSoft
-cmd29=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
-menu30=cmder config
-cmd30=cd %COMMANDER_PATH%\RunAsTool\cmder\config
-menu31=--
-menu32=-ExaData
-menu33=11_exaData
-cmd33=cd d:\11_exaData
-menu34=05_WSH
-cmd34=cd d:\11_exaData\05_OS\05_WSH
-menu35=06_util
-cmd35=cd d:\11_exaData\06_util
-menu36=010_ZZATURI
-cmd36=cd d:\11_exaData\06_util\010_ZZATURI
-menu37=016_dev tool
-cmd37=cd d:\11_exaData\06_util\016_dev tool
-menu38=12_BAT_FFMPEG
-cmd38=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu39=099_Game
-cmd39=cd d:\11_exaData\06_util\099_Game
-menu40=--
-menu41=-ihanseol
-menu42=04_Reference Data
-cmd42=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu43=11_JungCheon Photo by Season
-cmd43=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu44=07_LandSlide
-cmd44=cd d:\12_dev\02_Excel\07_LandSlide
-menu45=05_ihanseol - 2020
-cmd45=cd d:\09_hardRain\05_ihanseol - 2020
-menu46=06_ihanseol - 2021
-cmd46=cd d:\09_hardRain\06_ihanseol - 2021
-menu47=07_ihanseol - 2022
-cmd47=cd d:\09_hardRain\07_ihanseol - 2022
-menu48=08_ihanseol - 2023
-cmd48=cd d:\09_hardRain\08_ihanseol - 2023
-menu49=--
-menu50=00_Emule
-cmd50=cd C:\ProgramData\00_Emule
-menu51=02_ROMS
-cmd51=cd d:\11_exaData\10_Game\02_ROMS
-menu52=03_download
-cmd52=cd d:\03_download
-menu53=03_my_script
-cmd53=cd d:\12_dev\03_visual_lisp\03_my_script
-menu54=02_Book
-cmd54=cd d:\02_Book
-menu55=08_나의작업
-cmd55=cd d:\08_나의작업
-menu56=04_mp3
-cmd56=cd d:\04_mp3
-menu57=05_Send
-cmd57=cd d:\05_Send
-menu58=06_Send2
-cmd58=cd d:\06_Send2
-menu59=12_dev
-cmd59=cd d:\12_dev
-menu60=C:_Temp
-cmd60=cd c:\Temp
-menu61=e: download
-cmd61=cd e:\download
-menu62=10_photo/Desktop picture/bing
-cmd62=cd d:\10_photo\Desktop Pictures\bing
-menu63=FlowLauncher CustomIcons
-cmd63=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu64=ProgramData cmder
-cmd64=cd C:\ProgramData\cmder
-menu65=NAS4DUAL 06_util
-cmd65=cd z:\11_exaData\06_util
+menu4=Windows Fonts
+cmd4=cd C:\Windows\Fonts
+menu5=System32
+cmd5=cd c:\Windows\System32
+menu6=SendTo
+cmd6=cd C:\Users\minhwasoo\AppData\Roaming\Microsoft\Windows\SendTo
+menu7=AdobeGCClient
+cmd7=cd c:\Program Files (x86)\Common Files\Adobe\AdobeGCClient
+menu8=SeleniumBasic
+cmd8=cd c:\Program Files\SeleniumBasic
+menu9=VBA7.1
+cmd9=cd c:\Program Files\Microsoft Office\root\vfs\ProgramFilesCommonX64\Microsoft Shared\VBA\VBA7.1
+menu10=Desktop
+cmd10=cd c:\Users\minhwasoo\Desktop
+menu11=Documents
+cmd11=cd c:\Users\minhwasoo\Documents
+menu12=Downloads
+cmd12=cd c:\Users\minhwasoo\Downloads
+menu13=Pictures
+cmd13=cd c:\Users\minhwasoo\Pictures
+menu14=minhwasoo
+cmd14=cd c:\Users\minhwasoo
+menu15=Windows
+cmd15=cd c:\Windows
+menu16=color profile
+cmd16=cd c:\Windows\System32\spool\drivers\color
+menu17=WHPA
+cmd17=cd c:\WHPA
+menu18=AutoCAD 2021
+cmd18=cd c:\Program Files\Autodesk\AutoCAD 2021
+menu19=autocad 21 : Support & y
+cmd19=cd C:\Users\minhwasoo\AppData\Roaming\Autodesk\AutoCAD 2021\R24.0\enu\Support
+menu20=--
+menu21=-total commander
+menu22=totalcmd
+cmd22=cd C:\Program Files\totalcmd
+menu23=Total Commander ini
+cmd23=cd %COMMANDER_PATH%\ini
+menu24=Dos Batch File Example
+cmd24=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
+menu25=ini for minhwasoo
+cmd25=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
+menu26=inside TotalCmd GHISLER
+cmd26=cd %COMMANDER_PATH%\ini\GHISLER
+menu27=icons dll
+cmd27=cd %COMMANDER_PATH%\ini\icons dll
+menu28=RunAsTool
+cmd28=cd %COMMANDER_PATH%\RunAsTool
+menu29=98_Sordum
+cmd29=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
+menu30=99_NirSoft
+cmd30=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
+menu31=cmder config
+cmd31=cd %COMMANDER_PATH%\RunAsTool\cmder\config
+menu32=--
+menu33=-ExaData
+menu34=11_exaData
+cmd34=cd d:\11_exaData
+menu35=05_WSH
+cmd35=cd d:\11_exaData\05_OS\05_WSH
+menu36=06_util
+cmd36=cd d:\11_exaData\06_util
+menu37=010_ZZATURI
+cmd37=cd d:\11_exaData\06_util\010_ZZATURI
+menu38=016_dev tool
+cmd38=cd d:\11_exaData\06_util\016_dev tool
+menu39=12_BAT_FFMPEG
+cmd39=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu40=099_Game
+cmd40=cd d:\11_exaData\06_util\099_Game
+menu41=--
+menu42=-ihanseol
+menu43=04_Reference Data
+cmd43=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu44=11_JungCheon Photo by Season
+cmd44=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu45=07_LandSlide
+cmd45=cd d:\12_dev\02_Excel\07_LandSlide
+menu46=05_ihanseol - 2020
+cmd46=cd d:\09_hardRain\05_ihanseol - 2020
+menu47=06_ihanseol - 2021
+cmd47=cd d:\09_hardRain\06_ihanseol - 2021
+menu48=07_ihanseol - 2022
+cmd48=cd d:\09_hardRain\07_ihanseol - 2022
+menu49=08_ihanseol - 2023
+cmd49=cd d:\09_hardRain\08_ihanseol - 2023
+menu50=--
+menu51=00_Emule
+cmd51=cd C:\ProgramData\00_Emule
+menu52=02_ROMS
+cmd52=cd d:\11_exaData\10_Game\02_ROMS
+menu53=03_download
+cmd53=cd d:\03_download
+menu54=03_my_script
+cmd54=cd d:\12_dev\03_visual_lisp\03_my_script
+menu55=02_Book
+cmd55=cd d:\02_Book
+menu56=08_나의작업
+cmd56=cd d:\08_나의작업
+menu57=04_mp3
+cmd57=cd d:\04_mp3
+menu58=05_Send
+cmd58=cd d:\05_Send
+menu59=06_Send2
+cmd59=cd d:\06_Send2
+menu60=12_dev
+cmd60=cd d:\12_dev
+menu61=C:_Temp
+cmd61=cd c:\Temp
+menu62=e: download
+cmd62=cd e:\download
+menu63=10_photo/Desktop picture/bing
+cmd63=cd d:\10_photo\Desktop Pictures\bing
+menu64=FlowLauncher CustomIcons
+cmd64=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu65=ProgramData cmder
+cmd65=cd C:\ProgramData\cmder
+menu66=NAS4DUAL 06_util
+cmd66=cd z:\11_exaData\06_util
