--- a/GHISLER/CONFIG/Extensions.ini
+++ b/GHISLER/CONFIG/Extensions.ini
@@ -60,3 +60,6 @@ sublime-build=""C:\Program Files\Sublime Text\sublime_text.exe""
 sublime-settings=""C:\Program Files\Sublime Text\sublime_text.exe""
 
 ttf=""c:\windows\system32\fontview.exe""
+ttc=""c:\windows\system32\fontview.exe""
+fon=""c:\windows\system32\fontview.exe""
+otf=""c:\windows\system32\fontview.exe""
