--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -13,23 +13,28 @@ exe_SearchFlags=0|002002000020|||||||||0000|||
 
 
 [SearchName]
-0=flow
-1=타자
-2=타바
-3=TCNewLib1
-4=ico
+0=debug
+1=profile
+2=run_profile_d*.*
+3=run_profile_d
+4=flow
+5=타자
+6=타바
+7=TCNewLib1
+8=ico
 
 [SearchIn]
-0=d:\11_exaData\06_util
-1=C:\Program Files\totalcmd
-2=d:\09_hardRain\05_ihanseol - 2020
-3=D:\09_hardRain\08_ihanseol - 2023
-4=d:\09_hardRain\07_ihanseol - 2023
-5=d:\09_hardRain\07_ihanseol - 2022
-6=C:\ProgramData\cmder
-7=C:\Program Files\totalcmd\ini\icons dll\Captiva\32x32\apps
-8=C:\Program Files\totalcmd\ini\icons dll\Captiva
-9=C:\Program Files\totalcmd\ini\icons dll\Captiva\48x48\web
-10=C:\ProgramData\00_Emule\xenia_master\patches
-11=d:\09_hardRain
-12=C:\ProgramData\00_Emule\rpcs3-v0.0.25-14499-5b95cfda_win64
+0=C:\Program Files\totalcmd\RunAsTool\cmder
+1=d:\11_exaData\06_util
+2=C:\Program Files\totalcmd
+3=d:\09_hardRain\05_ihanseol - 2020
+4=D:\09_hardRain\08_ihanseol - 2023
+5=d:\09_hardRain\07_ihanseol - 2023
+6=d:\09_hardRain\07_ihanseol - 2022
+7=C:\ProgramData\cmder
+8=C:\Program Files\totalcmd\ini\icons dll\Captiva\32x32\apps
+9=C:\Program Files\totalcmd\ini\icons dll\Captiva
+10=C:\Program Files\totalcmd\ini\icons dll\Captiva\48x48\web
+11=C:\ProgramData\00_Emule\xenia_master\patches
+12=d:\09_hardRain
+13=C:\ProgramData\00_Emule\rpcs3-v0.0.25-14499-5b95cfda_win64
