--- a/GHISLER/CONFIG/Shortcuts.ini
+++ b/GHISLER/CONFIG/Shortcuts.ini
@@ -33,6 +33,11 @@ CA+F6=em_FastMove
 CA+Q=em_startTCQSP
 CA+F1=em_gitBash
 CA+ENTER=em_open_folder
+CA+DOWN=em_WindowsTerminal
+CA+UP=em_Cmder
+CA+LEFT=em_Command
+CA+RIGHT=em_PowerShell
+
 
 
 
