--- a/GHISLER/CONFIG/User.ini
+++ b/GHISLER/CONFIG/User.ini
@@ -1,6 +1,6 @@
 [User]
 menu1=Create NTFS link
-cmd1=%commander_path%\SOFT\UTILS\NTFSLINKS\NtfsLinks.exe
+cmd1=%commander_path%\RunAsTool\98_Sordum\ntfs_link\NtfsLinks.exe
 param1=""%L" "%T\""
 key1=5
 
