--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -29,4 +29,32 @@ cmd=.
 menu=open folder
 
 
+[em_Youtube1080]
+button=C:\Program Files\totalcmd\RunAsTool\10_YoutubeDL\youtube-dl.exe
+cmd=d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG\youtube-dl-Video-MP4-MaxSize.cmd
+menu=YotubeMax
 
+
+[em_Cmder]
+button=C:\Program Files\totalcmd\RunAsTool\cmder\cmder.exe
+cmd=C:\Program Files\totalcmd\RunAsTool\cmder\cmder.exe
+menu=Total Cmder
+
+[em_Command]
+button=C:\Windows\SysWOW64\cmd.exe
+cmd=C:\Windows\SysWOW64\cmd
+param=%P
+menu=Open Cmd Console
+
+
+[em_PowerShell]
+button=C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
+cmd=C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
+path=%p
+menu=Open PowerShell
+
+
+[em_WindowsTerminal]
+button=C:\Program Files\WindowsApps\Microsoft.WindowsTerminal_1.15.3465.0_x64__8wekyb3d8bbwe\wt.exe
+cmd=C:\Program Files\WindowsApps\Microsoft.WindowsTerminal_1.15.3465.0_x64__8wekyb3d8bbwe\wt.exe
+menu=Open Windows Terminal
