--- a/GHISLER/CONFIG/Configuration.ini
+++ b/GHISLER/CONFIG/Configuration.ini
@@ -2,10 +2,10 @@
 
 UseNewDefFont=1
 SetEncoding=дц.do.not.remove
-firstmnu=1370
+firstmnu=2203
 FirstTimeIconLib=0
 FirstTime=0
-test=49
+test=3
 ShowCentury=1
 Aligned extension=1
 SizeStyle=7
@@ -111,3 +111,4 @@ CustomSeparators=00,0
 CustomDateFormat=2
 IgnoreListFileEnabled=0
 IgnoreListFile=C:\Users\minhwasoo\AppData\Roaming\GHISLER\tcignore.txt
+ShowCopyOptions=1
