--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,27 +1,28 @@
 
 [left]
-path=C:\Users\minhwasoo\AppData\Roaming\GHISLER\
+path=d:\05_Send\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=3
-show=1
+show=3
 negative Sortorder=0
 activepanelcolordark=-1
 activepanelcolordark2=-1
 userspec=*.*
 customsortorder=0
+AutoViewMode=1
 
 
 [right]
-path=d:\09_hardRain\08_ihanseol - 2023\
-ViewMode=0
+path=C:\Program Files\totalcmd\ini\config\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=3
+show=1
 sortorder=0
 negative Sortorder=0
 activepanelcolordark=-1
@@ -63,15 +64,17 @@ XPstyle=1
 2_options=1|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\Downloads\
 3_options=6|0|0|0|0|1|0|
-4_path=d:\05_Send\
-4_options=6|0|0|0|0|1|0|||0|1
-activetab=5
+activetab=4
+activelocked=1
 [righttabs]
 0_path=d:\11_exaData\
 0_options=1|0|0|0|0|1|0|
 1_path=d:\12_dev\
 1_options=1|0|0|0|0|1|0|
-2_path=c:\Users\minhwasoo\Downloads\
+2_path=c:\Users\minhwasoo\Desktop\
 2_options=1|0|0|0|0|1|0|
-activetab=3
-activelocked=1
+3_path=c:\Users\minhwasoo\Downloads\
+3_options=1|0|0|0|0|1|0|
+4_path=d:\09_hardRain\08_ihanseol - 2023\
+4_options=1|0|0|0|0|1|0|
+activetab=5
