--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -38,11 +38,12 @@ menu=YotubeMax
 [em_Cmder]
 button=C:\Program Files\totalcmd\RunAsTool\cmder\cmder.exe
 cmd=C:\Program Files\totalcmd\RunAsTool\cmder\cmder.exe
+path=d:\12_dev\
 menu=Total Cmder
 
 [em_Command]
-button=C:\Windows\SysWOW64\cmd.exe
-cmd=C:\Windows\SysWOW64\cmd
+button=C:\Windows\System32\cmd.exe
+cmd=C:\Windows\System32\cmd.exe
 param=%P
 menu=Open Cmd Console
 
@@ -50,7 +51,7 @@ menu=Open Cmd Console
 [em_PowerShell]
 button=C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
 cmd=C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
-path=%p
+path=d:\12_dev\
 menu=Open PowerShell
 
 
