--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -66,60 +66,66 @@ menu35=05_WSH
 cmd35=cd d:\11_exaData\05_OS\05_WSH
 menu36=06_util
 cmd36=cd d:\11_exaData\06_util
-menu37=010_ZZATURI
-cmd37=cd d:\11_exaData\06_util\010_ZZATURI
-menu38=016_dev tool
-cmd38=cd d:\11_exaData\06_util\016_dev tool
-menu39=12_BAT_FFMPEG
-cmd39=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu40=099_Game
-cmd40=cd d:\11_exaData\06_util\099_Game
-menu41=--
-menu42=-ihanseol
-menu43=04_Reference Data
-cmd43=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu44=11_JungCheon Photo by Season
-cmd44=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu45=07_LandSlide
-cmd45=cd d:\12_dev\02_Excel\07_LandSlide
-menu46=05_ihanseol - 2020
-cmd46=cd d:\09_hardRain\05_ihanseol - 2020
-menu47=06_ihanseol - 2021
-cmd47=cd d:\09_hardRain\06_ihanseol - 2021
-menu48=07_ihanseol - 2022
-cmd48=cd d:\09_hardRain\07_ihanseol - 2022
-menu49=08_ihanseol - 2023
-cmd49=cd d:\09_hardRain\08_ihanseol - 2023
-menu50=--
-menu51=00_Emule
-cmd51=cd C:\ProgramData\00_Emule
-menu52=02_ROMS
-cmd52=cd d:\11_exaData\10_Game\02_ROMS
-menu53=03_download
-cmd53=cd d:\03_download
-menu54=03_my_script
-cmd54=cd d:\12_dev\03_visual_lisp\03_my_script
-menu55=02_Book
-cmd55=cd d:\02_Book
-menu56=08_나의작업
-cmd56=cd d:\08_나의작업
-menu57=04_mp3
-cmd57=cd d:\04_mp3
-menu58=05_Send
-cmd58=cd d:\05_Send
-menu59=06_Send2
-cmd59=cd d:\06_Send2
-menu60=12_dev
-cmd60=cd d:\12_dev
-menu61=C:_Temp
-cmd61=cd c:\Temp
-menu62=e: download
-cmd62=cd e:\download
-menu63=10_photo/Desktop picture/bing
-cmd63=cd d:\10_photo\Desktop Pictures\bing
-menu64=FlowLauncher CustomIcons
-cmd64=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu65=ProgramData cmder
-cmd65=cd C:\ProgramData\cmder
-menu66=NAS4DUAL 06_util
-cmd66=cd z:\11_exaData\06_util
+menu37=016_dev tool
+cmd37=cd d:\11_exaData\06_util\016_dev tool
+menu38=010_ZZATURI
+cmd38=cd d:\11_exaData\06_util\010_ZZATURI
+menu39=01_Test Program
+cmd39=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
+menu40=12_BAT_FFMPEG
+cmd40=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu41=099_Game
+cmd41=cd d:\11_exaData\06_util\099_Game
+menu42=--
+menu43=-ihanseol
+menu44=04_Reference Data
+cmd44=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu45=11_JungCheon Photo by Season
+cmd45=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu46=07_LandSlide
+cmd46=cd d:\12_dev\02_Excel\07_LandSlide
+menu47=05_ihanseol - 2020
+cmd47=cd d:\09_hardRain\05_ihanseol - 2020
+menu48=06_ihanseol - 2021
+cmd48=cd d:\09_hardRain\06_ihanseol - 2021
+menu49=07_ihanseol - 2022
+cmd49=cd d:\09_hardRain\07_ihanseol - 2022
+menu50=08_ihanseol - 2023
+cmd50=cd d:\09_hardRain\08_ihanseol - 2023
+menu51=--
+menu52=-WSL2
+menu53=WSL LocalState EXT4
+cmd53=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu54=WSL minhwasoo
+cmd54=cd a:\home\minhwasoo
+menu55=--
+menu56=00_Emule
+cmd56=cd C:\ProgramData\00_Emule
+menu57=02_ROMS
+cmd57=cd d:\11_exaData\10_Game\02_ROMS
+menu58=03_download
+cmd58=cd d:\03_download
+menu59=03_my_script
+cmd59=cd d:\12_dev\03_visual_lisp\03_my_script
+menu60=02_Book
+cmd60=cd d:\02_Book
+menu61=08_나의작업
+cmd61=cd d:\08_나의작업
+menu62=04_mp3
+cmd62=cd d:\04_mp3
+menu63=05_Send
+cmd63=cd d:\05_Send
+menu64=06_Send2
+cmd64=cd d:\06_Send2
+menu65=12_dev
+cmd65=cd d:\12_dev
+menu66=C:_Temp
+cmd66=cd c:\Temp
+menu67=e: download
+cmd67=cd e:\download
+menu68=Bing
+cmd68=cd d:\10_photo\Desktop Pictures\bing
+menu69=FlowLauncher CustomIcons
+cmd69=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu70=NAS4DUAL 06_util
+cmd70=cd z:\11_exaData\06_util
