--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -6,7 +6,7 @@ activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=3
-show=3
+show=1
 negative Sortorder=0
 activepanelcolordark=-1
 activepanelcolordark2=-1
@@ -16,8 +16,8 @@ AutoViewMode=1
 
 
 [right]
-path=C:\Program Files\totalcmd\ini\config\
-ViewMode=-1
+path=d:\09_hardRain\08_ihanseol - 2023\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -75,6 +75,5 @@ activelocked=1
 2_options=1|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-4_path=d:\09_hardRain\08_ihanseol - 2023\
-4_options=1|0|0|0|0|1|0|
-activetab=5
+activetab=4
+activelocked=1
