--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -13,28 +13,30 @@ exe_SearchFlags=0|002002000020|||||||||0000|||
 
 
 [SearchName]
-0=debug
-1=profile
-2=run_profile_d*.*
-3=run_profile_d
-4=flow
-5=타자
-6=타바
-7=TCNewLib1
-8=ico
+0=.bashrc
+1=debug
+2=profile
+3=run_profile_d*.*
+4=run_profile_d
+5=flow
+6=타자
+7=타바
+8=TCNewLib1
+9=ico
 
 [SearchIn]
-0=C:\Program Files\totalcmd\RunAsTool\cmder
-1=d:\11_exaData\06_util
-2=C:\Program Files\totalcmd
-3=d:\09_hardRain\05_ihanseol - 2020
-4=D:\09_hardRain\08_ihanseol - 2023
-5=d:\09_hardRain\07_ihanseol - 2023
-6=d:\09_hardRain\07_ihanseol - 2022
-7=C:\ProgramData\cmder
-8=C:\Program Files\totalcmd\ini\icons dll\Captiva\32x32\apps
-9=C:\Program Files\totalcmd\ini\icons dll\Captiva
-10=C:\Program Files\totalcmd\ini\icons dll\Captiva\48x48\web
-11=C:\ProgramData\00_Emule\xenia_master\patches
-12=d:\09_hardRain
-13=C:\ProgramData\00_Emule\rpcs3-v0.0.25-14499-5b95cfda_win64
+0=C:\Program Files\Git
+1=C:\Program Files\totalcmd\RunAsTool\cmder
+2=d:\11_exaData\06_util
+3=C:\Program Files\totalcmd
+4=d:\09_hardRain\05_ihanseol - 2020
+5=D:\09_hardRain\08_ihanseol - 2023
+6=d:\09_hardRain\07_ihanseol - 2023
+7=d:\09_hardRain\07_ihanseol - 2022
+8=C:\ProgramData\cmder
+9=C:\Program Files\totalcmd\ini\icons dll\Captiva\32x32\apps
+10=C:\Program Files\totalcmd\ini\icons dll\Captiva
+11=C:\Program Files\totalcmd\ini\icons dll\Captiva\48x48\web
+12=C:\ProgramData\00_Emule\xenia_master\patches
+13=d:\09_hardRain
+14=C:\ProgramData\00_Emule\rpcs3-v0.0.25-14499-5b95cfda_win64
