--- a/GHISLER/CONFIG/Shortcuts.ini
+++ b/GHISLER/CONFIG/Shortcuts.ini
@@ -37,8 +37,10 @@ CA+DOWN=em_WindowsTerminal
 CA+UP=em_Cmder
 CA+LEFT=em_Command
 CA+RIGHT=em_PowerShell
-
-
+C+E=em_Gvim
+CA+C=cm_CopySrcPathToClip
+CA+F=em_AgentRanSack
+CS+F=em_grepWin
 
 
 [ShortcutsWin]
