--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -20,7 +20,7 @@ menu=FastMove
 [em_gitBash]
 button=C:\Program Files\Git\git-bash.exe
 cmd=C:\Program Files\Git\git-bash.exe
-path=d:\12_dev\
+path=C:\Users\minhwasoo\
 menu=git bash
 
 [em_open_folder]
@@ -38,7 +38,7 @@ menu=YotubeMax
 [em_Cmder]
 button=C:\Program Files\totalcmd\RunAsTool\cmder\cmder.exe
 cmd=C:\Program Files\totalcmd\RunAsTool\cmder\cmder.exe
-path=d:\12_dev\
+param=/start "%P"
 menu=Total Cmder
 
 [em_Command]
@@ -59,3 +59,30 @@ menu=Open PowerShell
 button=C:\Program Files\WindowsApps\Microsoft.WindowsTerminal_1.15.3465.0_x64__8wekyb3d8bbwe\wt.exe
 cmd=C:\Program Files\WindowsApps\Microsoft.WindowsTerminal_1.15.3465.0_x64__8wekyb3d8bbwe\wt.exe
 menu=Open Windows Terminal
+
+
+[em_Gvim]
+button=C:\Program Files\Vim\vim90\gvim.exe
+cmd=c:\Program Files\Vim\vim90\gvim.exe
+param=%n
+menu=open file in gvim
+
+[em_AgentRanSack]
+button=c:\Program Files\Mythicsoft\Agent Ransack\AgentRansack.exe
+cmd=c:\Program Files\Mythicsoft\Agent Ransack\AgentRansack.exe
+param=-d "%p"
+menu=Agent RanSack Text Finder
+
+[em_grepWin]
+button=c:\Program Files\totalcmd\RunAsTool\98_Sordum\GrepWin\grepWin-x64-2.0.13_portable.exe
+cmd=c:\Program Files\totalcmd\RunAsTool\98_Sordum\GrepWin\grepWin-x64-2.0.13_portable.exe
+param=%p
+menu=Grep for Windows
+
+
+
+
+
+
+
+
