--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,6 +1,6 @@
 
 [left]
-path=C:\Users\minhwasoo\AppData\Roaming\GHISLER\CONFIG\
+path=d:\05_Send\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -12,11 +12,12 @@ activepanelcolordark=-1
 activepanelcolordark2=-1
 userspec=*.*
 customsortorder=0
+AutoViewMode=1
 
 
 [right]
-path=d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\Search for Text\
-ViewMode=-1
+path=d:\09_hardRain\08_ihanseol - 2023\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -60,16 +61,13 @@ XPstyle=1
 1_path=c:\Users\minhwasoo\Documents\
 1_options=1|0|0|0|0|1|0|
 2_path=c:\Users\minhwasoo\Desktop\
-2_options=1|0|0|0|0|1|0|
+2_options=6|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\
 3_options=6|0|0|0|0|1|0|
 4_path=c:\Users\minhwasoo\Downloads\
 4_options=6|0|0|0|0|1|0|
-5_path=d:\05_Send\
-5_options=6|0|0|0|0|1|0|||0|1
-6_path=C:\Program Files\totalcmd\RunAsTool\cmder1\
-6_options=6|0|0|0|0|0|0|
-activetab=7
+activetab=5
+activelocked=1
 [righttabs]
 0_path=d:\11_exaData\
 0_options=1|0|0|0|0|1|0|
@@ -79,6 +77,5 @@ activetab=7
 2_options=1|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-4_path=d:\09_hardRain\08_ihanseol - 2023\
-4_options=1|0|0|0|0|1|0|
-activetab=5
+activetab=4
+activelocked=1
