--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -13,30 +13,32 @@ exe_SearchFlags=0|002002000020|||||||||0000|||
 
 
 [SearchName]
-0=.bashrc
-1=debug
-2=profile
-3=run_profile_d*.*
-4=run_profile_d
-5=flow
-6=타자
-7=타바
-8=TCNewLib1
-9=ico
+0=ipython
+1=.bashrc
+2=debug
+3=profile
+4=run_profile_d*.*
+5=run_profile_d
+6=flow
+7=타자
+8=타바
+9=TCNewLib1
+10=ico
 
 [SearchIn]
-0=C:\Program Files\Git
-1=C:\Program Files\totalcmd\RunAsTool\cmder
-2=d:\11_exaData\06_util
-3=C:\Program Files\totalcmd
-4=d:\09_hardRain\05_ihanseol - 2020
-5=D:\09_hardRain\08_ihanseol - 2023
-6=d:\09_hardRain\07_ihanseol - 2023
-7=d:\09_hardRain\07_ihanseol - 2022
-8=C:\ProgramData\cmder
-9=C:\Program Files\totalcmd\ini\icons dll\Captiva\32x32\apps
-10=C:\Program Files\totalcmd\ini\icons dll\Captiva
-11=C:\Program Files\totalcmd\ini\icons dll\Captiva\48x48\web
-12=C:\ProgramData\00_Emule\xenia_master\patches
-13=d:\09_hardRain
-14=C:\ProgramData\00_Emule\rpcs3-v0.0.25-14499-5b95cfda_win64
+0=C:\Users\minhwasoo\AppData\Local\Programs\Python\Python311
+1=C:\Program Files\Git
+2=C:\Program Files\totalcmd\RunAsTool\cmder
+3=d:\11_exaData\06_util
+4=C:\Program Files\totalcmd
+5=d:\09_hardRain\05_ihanseol - 2020
+6=D:\09_hardRain\08_ihanseol - 2023
+7=d:\09_hardRain\07_ihanseol - 2023
+8=d:\09_hardRain\07_ihanseol - 2022
+9=C:\ProgramData\cmder
+10=C:\Program Files\totalcmd\ini\icons dll\Captiva\32x32\apps
+11=C:\Program Files\totalcmd\ini\icons dll\Captiva
+12=C:\Program Files\totalcmd\ini\icons dll\Captiva\48x48\web
+13=C:\ProgramData\00_Emule\xenia_master\patches
+14=d:\09_hardRain
+15=C:\ProgramData\00_Emule\rpcs3-v0.0.25-14499-5b95cfda_win64
