--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -80,9 +80,8 @@ param=%p
 menu=Grep for Windows
 
 
-
-
-
-
-
-
+[em_sublime]
+button=C:\Program Files\Sublime Text\sublime_text.exe
+cmd=C:\Program Files\Sublime Text\subl.exe
+param=-a "%P"
+menu=Open SublimeText
