--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -10,140 +10,144 @@ menu5=System32
 cmd5=cd c:\Windows\System32
 menu6=SendTo
 cmd6=cd C:\Users\minhwasoo\AppData\Roaming\Microsoft\Windows\SendTo
-menu7=Sublime Installed Packages
-cmd7=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu8=AdobeGCClient
-cmd8=cd c:\Program Files (x86)\Common Files\Adobe\AdobeGCClient
-menu9=SeleniumBasic
-cmd9=cd c:\Program Files\SeleniumBasic
-menu10=VBA7.1
-cmd10=cd c:\Program Files\Microsoft Office\root\vfs\ProgramFilesCommonX64\Microsoft Shared\VBA\VBA7.1
-menu11=Desktop
-cmd11=cd c:\Users\minhwasoo\Desktop
-menu12=Documents
-cmd12=cd c:\Users\minhwasoo\Documents
-menu13=Downloads
-cmd13=cd c:\Users\minhwasoo\Downloads
-menu14=Pictures
-cmd14=cd c:\Users\minhwasoo\Pictures
-menu15=minhwasoo
-cmd15=cd c:\Users\minhwasoo
-menu16=Windows
-cmd16=cd c:\Windows
-menu17=color profile
-cmd17=cd c:\Windows\System32\spool\drivers\color
-menu18=WHPA
-cmd18=cd c:\WHPA
-menu19=AutoCAD 2021
-cmd19=cd c:\Program Files\Autodesk\AutoCAD 2021
-menu20=autocad 21 : Support & y
-cmd20=cd C:\Users\minhwasoo\AppData\Roaming\Autodesk\AutoCAD 2021\R24.0\enu\Support
-menu21=--
-menu22=-total commander
-menu23=totalcmd
-cmd23=cd C:\Program Files\totalcmd
-menu24=Total Commander ini
-cmd24=cd %COMMANDER_PATH%\ini
-menu25=totalcmd - ini - config
-cmd25=cd %COMMANDER_PATH%\ini\config
-menu26=Dos Batch File Example
-cmd26=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
-menu27=ini for minhwasoo
-cmd27=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
-menu28=inside TotalCmd GHISLER
-cmd28=cd %COMMANDER_PATH%\ini\GHISLER
-menu29=icons dll
-cmd29=cd %COMMANDER_PATH%\ini\icons dll
-menu30=RunAsTool
-cmd30=cd %COMMANDER_PATH%\RunAsTool
-menu31=98_Sordum
-cmd31=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
-menu32=99_NirSoft
-cmd32=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
-menu33=cmder config
-cmd33=cd %COMMANDER_PATH%\RunAsTool\cmder\config
-menu34=--
-menu35=-ExaData
-menu36=11_exaData
-cmd36=cd d:\11_exaData
-menu37=05_WSH
-cmd37=cd d:\11_exaData\05_OS\05_WSH
-menu38=06_util
-cmd38=cd d:\11_exaData\06_util
-menu39=016_dev tool
-cmd39=cd d:\11_exaData\06_util\016_dev tool
-menu40=010_ZZATURI
-cmd40=cd d:\11_exaData\06_util\010_ZZATURI
-menu41=01_Test Program
-cmd41=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
-menu42=12_BAT_FFMPEG
-cmd42=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu43=099_Game
-cmd43=cd d:\11_exaData\06_util\099_Game
-menu44=10_cmder
-cmd44=cd d:\11_exaData\06_util\099_Game\10_cmder
-menu45=--
-menu46=-ihanseol
-menu47=04_Reference Data
-cmd47=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu48=11_JungCheon Photo by Season
-cmd48=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu49=07_LandSlide
-cmd49=cd d:\12_dev\02_Excel\07_LandSlide
-menu50=05_ihanseol - 2020
-cmd50=cd d:\09_hardRain\05_ihanseol - 2020
-menu51=06_ihanseol - 2021
-cmd51=cd d:\09_hardRain\06_ihanseol - 2021
-menu52=07_ihanseol - 2022
-cmd52=cd d:\09_hardRain\07_ihanseol - 2022
-menu53=08_ihanseol - 2023
-cmd53=cd d:\09_hardRain\08_ihanseol - 2023
-menu54=--
-menu55=-WSL2
-menu56=WSL LocalState EXT4
-cmd56=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu57=WSL minhwasoo
-cmd57=cd a:\home\minhwasoo
-menu58=--
-menu59=-Git Bash
-menu60=Git
-cmd60=cd C:\Program Files\Git
-menu61=gitbash /usr/bin
-cmd61=cd C:\Program Files\Git\usr\bin
-menu62=gitbash - mingw64 - bin
-cmd62=cd C:\Program Files\Git\mingw64\bin
-menu63=gitbvash - mingw64 - git-core
-cmd63=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu64=gitbash - mergetools
-cmd64=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu65=--
-menu66=00_Emule
-cmd66=cd C:\ProgramData\00_Emule
-menu67=02_ROMS
-cmd67=cd d:\11_exaData\10_Game\02_ROMS
-menu68=03_download
-cmd68=cd d:\03_download
-menu69=03_my_script
-cmd69=cd d:\12_dev\03_visual_lisp\03_my_script
-menu70=02_Book
-cmd70=cd d:\02_Book
-menu71=08_나의작업
-cmd71=cd d:\08_나의작업
-menu72=04_mp3
-cmd72=cd d:\04_mp3
-menu73=05_Send
-cmd73=cd d:\05_Send
-menu74=06_Send2
-cmd74=cd d:\06_Send2
-menu75=12_dev
-cmd75=cd d:\12_dev
-menu76=C:_Temp
-cmd76=cd c:\Temp
-menu77=e: download
-cmd77=cd e:\download
-menu78=Bing
-cmd78=cd d:\10_photo\Desktop Pictures\bing
-menu79=FlowLauncher CustomIcons
-cmd79=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu80=NAS4DUAL 06_util
-cmd80=cd z:\11_exaData\06_util
+menu7=AdobeGCClient
+cmd7=cd c:\Program Files (x86)\Common Files\Adobe\AdobeGCClient
+menu8=SeleniumBasic
+cmd8=cd c:\Program Files\SeleniumBasic
+menu9=VBA7.1
+cmd9=cd c:\Program Files\Microsoft Office\root\vfs\ProgramFilesCommonX64\Microsoft Shared\VBA\VBA7.1
+menu10=Desktop
+cmd10=cd c:\Users\minhwasoo\Desktop
+menu11=Documents
+cmd11=cd c:\Users\minhwasoo\Documents
+menu12=Downloads
+cmd12=cd c:\Users\minhwasoo\Downloads
+menu13=Pictures
+cmd13=cd c:\Users\minhwasoo\Pictures
+menu14=minhwasoo
+cmd14=cd c:\Users\minhwasoo
+menu15=Windows
+cmd15=cd c:\Windows
+menu16=color profile
+cmd16=cd c:\Windows\System32\spool\drivers\color
+menu17=AutoCAD 2021
+cmd17=cd c:\Program Files\Autodesk\AutoCAD 2021
+menu18=autocad 21 : Support & y
+cmd18=cd C:\Users\minhwasoo\AppData\Roaming\Autodesk\AutoCAD 2021\R24.0\enu\Support
+menu19=--
+menu20=-total commander
+menu21=totalcmd
+cmd21=cd C:\Program Files\totalcmd
+menu22=Total Commander ini
+cmd22=cd %COMMANDER_PATH%\ini
+menu23=totalcmd - ini - config
+cmd23=cd %COMMANDER_PATH%\ini\config
+menu24=Dos Batch File Example
+cmd24=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
+menu25=ini for minhwasoo
+cmd25=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
+menu26=inside TotalCmd GHISLER
+cmd26=cd %COMMANDER_PATH%\ini\GHISLER
+menu27=icons dll
+cmd27=cd %COMMANDER_PATH%\ini\icons dll
+menu28=RunAsTool
+cmd28=cd %COMMANDER_PATH%\RunAsTool
+menu29=98_Sordum
+cmd29=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
+menu30=99_NirSoft
+cmd30=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
+menu31=cmder config
+cmd31=cd %COMMANDER_PATH%\RunAsTool\cmder\config
+menu32=--
+menu33=-ExaData
+menu34=11_exaData
+cmd34=cd d:\11_exaData
+menu35=05_WSH
+cmd35=cd d:\11_exaData\05_OS\05_WSH
+menu36=06_util
+cmd36=cd d:\11_exaData\06_util
+menu37=016_dev tool
+cmd37=cd d:\11_exaData\06_util\016_dev tool
+menu38=010_ZZATURI
+cmd38=cd d:\11_exaData\06_util\010_ZZATURI
+menu39=01_Test Program
+cmd39=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
+menu40=12_BAT_FFMPEG
+cmd40=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu41=099_Game
+cmd41=cd d:\11_exaData\06_util\099_Game
+menu42=10_cmder
+cmd42=cd d:\11_exaData\06_util\099_Game\10_cmder
+menu43=--
+menu44=-ihanseol
+menu45=04_Reference Data
+cmd45=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu46=11_JungCheon Photo by Season
+cmd46=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu47=07_LandSlide
+cmd47=cd d:\12_dev\02_Excel\07_LandSlide
+menu48=05_ihanseol - 2020
+cmd48=cd d:\09_hardRain\05_ihanseol - 2020
+menu49=06_ihanseol - 2021
+cmd49=cd d:\09_hardRain\06_ihanseol - 2021
+menu50=07_ihanseol - 2022
+cmd50=cd d:\09_hardRain\07_ihanseol - 2022
+menu51=08_ihanseol - 2023
+cmd51=cd d:\09_hardRain\08_ihanseol - 2023
+menu52=--
+menu53=-WSL2
+menu54=WSL LocalState EXT4
+cmd54=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu55=WSL minhwasoo
+cmd55=cd a:\home\minhwasoo
+menu56=--
+menu57=-Git Bash
+menu58=Git
+cmd58=cd C:\Program Files\Git
+menu59=gitbash /usr/bin
+cmd59=cd C:\Program Files\Git\usr\bin
+menu60=gitbash - mingw64 - bin
+cmd60=cd C:\Program Files\Git\mingw64\bin
+menu61=gitbvash - mingw64 - git-core
+cmd61=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu62=gitbash - mergetools
+cmd62=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu63=--
+menu64=-App and Local
+menu65=Sublime Installed Packages
+cmd65=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu66=Packages
+cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu67=Sublime Package User
+cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu68=--
+menu69=00_Emule
+cmd69=cd C:\ProgramData\00_Emule
+menu70=02_ROMS
+cmd70=cd d:\11_exaData\10_Game\02_ROMS
+menu71=03_download
+cmd71=cd d:\03_download
+menu72=03_my_script
+cmd72=cd d:\12_dev\03_visual_lisp\03_my_script
+menu73=02_Book
+cmd73=cd d:\02_Book
+menu74=08_나의작업
+cmd74=cd d:\08_나의작업
+menu75=04_mp3
+cmd75=cd d:\04_mp3
+menu76=05_Send
+cmd76=cd d:\05_Send
+menu77=06_Send2
+cmd77=cd d:\06_Send2
+menu78=12_dev
+cmd78=cd d:\12_dev
+menu79=C:_Temp
+cmd79=cd c:\Temp
+menu80=e: download
+cmd80=cd e:\download
+menu81=Bing
+cmd81=cd d:\10_photo\Desktop Pictures\bing
+menu82=FlowLauncher CustomIcons
+cmd82=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu83=NAS4DUAL 06_util
+cmd83=cd z:\11_exaData\06_util
