--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -113,12 +113,12 @@ cmd61=cd C:\Program Files\Git\mingw64\libexec\git-core
 menu62=gitbash - mergetools
 cmd62=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
 menu63=--
-menu64=-App and Local
+menu64=-Appdata and Local, Folder
 menu65=Sublime Installed Packages
 cmd65=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu66=Packages
+menu66=Sublime Packages
 cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu67=Sublime Package User
+menu67=Sublime Packages User
 cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
 menu68=--
 menu69=00_Emule
