--- a/GHISLER/CONFIG/Shortcuts.ini
+++ b/GHISLER/CONFIG/Shortcuts.ini
@@ -15,8 +15,6 @@ A+Q=cm_SearchFor
 
 
 A+V=cm_SrcThumbs
-
-S+X=cm_PackFiles
 A+A=cm_PackFiles
 
 S+UP=cm_GoToFirstFile
@@ -32,16 +30,25 @@ CA+F6=em_FastMove
 
 CA+Q=em_startTCQSP
 CA+F1=em_gitBash
+
 CA+ENTER=em_open_folder
+
 CA+DOWN=em_WindowsTerminal
 CA+UP=em_Cmder
 CA+LEFT=em_Command
 CA+RIGHT=em_PowerShell
+
 C+E=em_Gvim
+CS+E=em_sublime
+CA+E=em_everything
+
+
 CA+C=cm_CopySrcPathToClip
+
 CA+F=em_AgentRanSack
 CS+F=em_grepWin
-CS+E=em_sublime
+
+
 
 
 [ShortcutsWin]
