--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -85,3 +85,10 @@ button=C:\Program Files\Sublime Text\sublime_text.exe
 cmd=C:\Program Files\Sublime Text\subl.exe
 param=-a "%P"
 menu=Open SublimeText
+
+[em_everything]
+button=c:\Program Files\Everything\Everything.exe
+cmd=c:\Program Files\Everything\Everything.exe
+menu=Open Everything
+
+
