--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -113,41 +113,49 @@ cmd61=cd C:\Program Files\Git\mingw64\libexec\git-core
 menu62=gitbash - mergetools
 cmd62=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
 menu63=--
-menu64=-Appdata and Local, Folder
+menu64=-Appdata and Local
 menu65=Sublime Installed Packages
 cmd65=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
 menu66=Sublime Packages
 cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
 menu67=Sublime Packages User
 cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu68=--
-menu69=00_Emule
-cmd69=cd C:\ProgramData\00_Emule
-menu70=02_ROMS
-cmd70=cd d:\11_exaData\10_Game\02_ROMS
-menu71=03_download
-cmd71=cd d:\03_download
-menu72=03_my_script
-cmd72=cd d:\12_dev\03_visual_lisp\03_my_script
-menu73=02_Book
-cmd73=cd d:\02_Book
-menu74=08_나의작업
-cmd74=cd d:\08_나의작업
-menu75=04_mp3
-cmd75=cd d:\04_mp3
-menu76=05_Send
-cmd76=cd d:\05_Send
-menu77=06_Send2
-cmd77=cd d:\06_Send2
-menu78=12_dev
-cmd78=cd d:\12_dev
-menu79=C:_Temp
-cmd79=cd c:\Temp
-menu80=e: download
-cmd80=cd e:\download
-menu81=Bing
-cmd81=cd d:\10_photo\Desktop Pictures\bing
-menu82=FlowLauncher CustomIcons
-cmd82=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu83=NAS4DUAL 06_util
-cmd83=cd z:\11_exaData\06_util
+menu68=FlowLauncher CustomIcons
+cmd68=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu69=ProgramData
+cmd69=cd C:\ProgramData
+menu70=AppData Local
+cmd70=cd C:\Users\minhwasoo\AppData\Local
+menu71=WindowsTerminal Setting
+cmd71=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu72=AddData Roaming
+cmd72=cd C:\Users\minhwasoo\AppData\Roaming
+menu73=--
+menu74=00_Emule
+cmd74=cd C:\ProgramData\00_Emule
+menu75=02_ROMS
+cmd75=cd d:\11_exaData\10_Game\02_ROMS
+menu76=03_download
+cmd76=cd d:\03_download
+menu77=03_my_script
+cmd77=cd d:\12_dev\03_visual_lisp\03_my_script
+menu78=02_Book
+cmd78=cd d:\02_Book
+menu79=08_나의작업
+cmd79=cd d:\08_나의작업
+menu80=04_mp3
+cmd80=cd d:\04_mp3
+menu81=05_Send
+cmd81=cd d:\05_Send
+menu82=06_Send2
+cmd82=cd d:\06_Send2
+menu83=12_dev
+cmd83=cd d:\12_dev
+menu84=C:_Temp
+cmd84=cd c:\Temp
+menu85=e: download
+cmd85=cd e:\download
+menu86=Bing
+cmd86=cd d:\10_photo\Desktop Pictures\bing
+menu87=NAS4DUAL 06_util
+cmd87=cd z:\11_exaData\06_util
