--- a/GHISLER/CONFIG/Shortcuts.ini
+++ b/GHISLER/CONFIG/Shortcuts.ini
@@ -1,18 +1,18 @@
 [Shortcuts]
+
+
 F2=cm_RenameOnly
 ESC=cm_ClearAll
 
 A+Z=cm_SwitchHidSys
-;A+B=cm_Edit
 
 A+D=cm_Delete
 A+E=cm_Edit
 
-A+Q=cm_SearchFor
-;A+Q=cm_SearchStandalone
-;A+Q=cm_ShowQuickSearch
-;A+Q=cm_SrcQuickview
 
+; Search
+A+Q=cm_SearchFor
+CA+Q=em_startTCQSP
 
 A+V=cm_SrcThumbs
 A+A=cm_PackFiles
@@ -21,37 +21,41 @@ S+UP=cm_GoToFirstFile
 S+LEFT=cm_GotoPreviousDrive
 S+RIGHT=cm_GotoNextDrive
 
-CS+C=cm_CopyFullNamesToClip
 
 C+R=cm_RereadSource
-
-CA+F5=em_FastCopy
-CA+F6=em_FastMove
-
-CA+Q=em_startTCQSP
-CA+F1=em_gitBash
-
 CA+ENTER=em_open_folder
 
+
+; Terminal
 CA+DOWN=em_WindowsTerminal
 CA+UP=em_Cmder
 CA+LEFT=em_Command
 CA+RIGHT=em_PowerShell
+CA+F1=em_gitBash
 
+
+; Editor
 C+E=em_Gvim
 CS+E=em_sublime
 CA+E=em_everything
 
-
+; Copy Path to Clipboard
+CS+C=cm_CopyFullNamesToClip
 CA+C=cm_CopySrcPathToClip
 
+; FastCopy 
+CA+F5=em_FastCopy
+CA+F6=em_FastMove
+
+; TextSearch from file
 CA+F=em_AgentRanSack
 CS+F=em_grepWin
 
 
 
-
 [ShortcutsWin]
+
+; FastCopy by Windows-F5, F6 Key
 F5=em_FastCopy
 F6=em_FastMove
 
