--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -92,3 +92,7 @@ cmd=c:\Program Files\Everything\Everything.exe
 menu=Open Everything
 
 
+[em_bing]
+button=C:\Program Files\totalcmd\ini\icons dll\backup 02.ico
+cmd=c:\Program Files\totalcmd\ini\backup.cmd bing
+menu=Backup Bing to Photo
