--- a/GHISLER/CONFIG/CustomFields.ini
+++ b/GHISLER/CONFIG/CustomFields.ini
@@ -1,11 +1,11 @@
 [CustomFields]
 AutoLoad=0
 
-Widths1=549,30,-41,66,80
-Headers1=size\ndate\nattr
-Contents1=[=tc.size.bkMG2]\n[=tc.creationdate]\n[=tc.attributestr]
+Widths1=530,38,-42,71,42
+Headers1=size\ndate\nattributes
+Contents1=[=tc.size.bkMG]\n[=tc.writedate]\n[=tc.attributestr]
 Options1=2544|0|96
-Titles=basic|size comment|comment|size, comment|size
+Titles=default|size comment|comment|size, comment|size
 
 Widths2=200,30,-80,80
 Headers2=Size\nComment
