--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -122,40 +122,42 @@ menu67=Sublime Packages User
 cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
 menu68=FlowLauncher CustomIcons
 cmd68=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu69=ProgramData
-cmd69=cd C:\ProgramData
+menu69=Bing WPImages
+cmd69=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
 menu70=AppData Local
 cmd70=cd C:\Users\minhwasoo\AppData\Local
-menu71=WindowsTerminal Setting
-cmd71=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu72=AddData Roaming
-cmd72=cd C:\Users\minhwasoo\AppData\Roaming
-menu73=--
-menu74=00_Emule
-cmd74=cd C:\ProgramData\00_Emule
-menu75=02_ROMS
-cmd75=cd d:\11_exaData\10_Game\02_ROMS
-menu76=03_download
-cmd76=cd d:\03_download
-menu77=03_my_script
-cmd77=cd d:\12_dev\03_visual_lisp\03_my_script
-menu78=02_Book
-cmd78=cd d:\02_Book
-menu79=08_나의작업
-cmd79=cd d:\08_나의작업
-menu80=04_mp3
-cmd80=cd d:\04_mp3
-menu81=05_Send
-cmd81=cd d:\05_Send
-menu82=06_Send2
-cmd82=cd d:\06_Send2
-menu83=12_dev
-cmd83=cd d:\12_dev
-menu84=C:_Temp
-cmd84=cd c:\Temp
-menu85=e: download
-cmd85=cd e:\download
-menu86=Bing
-cmd86=cd d:\10_photo\Desktop Pictures\bing
-menu87=NAS4DUAL 06_util
-cmd87=cd z:\11_exaData\06_util
+menu71=AddData Roaming
+cmd71=cd C:\Users\minhwasoo\AppData\Roaming
+menu72=WindowsTerminal Setting
+cmd72=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu73=ProgramData
+cmd73=cd C:\ProgramData
+menu74=--
+menu75=00_Emule
+cmd75=cd C:\ProgramData\00_Emule
+menu76=02_ROMS
+cmd76=cd d:\11_exaData\10_Game\02_ROMS
+menu77=03_download
+cmd77=cd d:\03_download
+menu78=03_my_script
+cmd78=cd d:\12_dev\03_visual_lisp\03_my_script
+menu79=02_Book
+cmd79=cd d:\02_Book
+menu80=08_나의작업
+cmd80=cd d:\08_나의작업
+menu81=04_mp3
+cmd81=cd d:\04_mp3
+menu82=05_Send
+cmd82=cd d:\05_Send
+menu83=06_Send2
+cmd83=cd d:\06_Send2
+menu84=12_dev
+cmd84=cd d:\12_dev
+menu85=C:_Temp
+cmd85=cd c:\Temp
+menu86=e: download
+cmd86=cd e:\download
+menu87=Bing
+cmd87=cd d:\10_photo\Desktop Pictures\bing
+menu88=NAS4DUAL 06_util
+cmd88=cd z:\11_exaData\06_util
