--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -6,7 +6,7 @@ activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=3
-show=1
+show=3
 negative Sortorder=0
 activepanelcolordark=-1
 activepanelcolordark2=-1
@@ -16,13 +16,13 @@ AutoViewMode=1
 
 
 [right]
-path=d:\09_hardRain\08_ihanseol - 2023\
-ViewMode=0
+path=d:\02_Book\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
-show=1
+show=3
 sortorder=0
 negative Sortorder=0
 activepanelcolordark=-1
@@ -63,7 +63,7 @@ XPstyle=1
 2_path=c:\Users\minhwasoo\Desktop\
 2_options=6|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\
-3_options=6|0|0|0|0|1|0|
+3_options=1|0|0|0|0|1|0|
 4_path=c:\Users\minhwasoo\Downloads\
 4_options=6|0|0|0|0|1|0|
 activetab=5
@@ -77,5 +77,6 @@ activelocked=1
 2_options=1|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-activetab=4
-activelocked=1
+4_path=d:\09_hardRain\08_ihanseol - 2023\
+4_options=1|0|0|0|0|1|0|
+activetab=5
