--- a/GHISLER/CONFIG/Plugins.ini
+++ b/GHISLER/CONFIG/Plugins.ini
@@ -1,13 +1,7 @@
 
 
-[ContentPlugins]
-0=C:\Program Files\totalcmd\plugins\wdx\TextSearch\TextSearch.wdx
-0_detect=
 
 
-[ContentPlugins64]
-$checksum$=906632310
-0=1
 
 
 [FileSystemPlugins]
@@ -21,3 +15,17 @@ Cloud=1
 Secure FTP=1
 Registry=1
 FSE=1
+[ContentPlugins]
+0=C:\Program Files\totalcmd\plugins\wdx\DirSizeCalc\DirSizeCalc.wdx
+1=C:\Program Files\totalcmd\plugins\wdx\TextSearch\TextSearch.wdx
+2=C:\Program Files\totalcmd\plugins\wdx\EmptyCheck\EmptyCheck.wdx
+0_detect=
+1_detect=
+2_detect=
+2_date=1160286627
+2_flags=0
+[ContentPlugins64]
+$checksum$=2258394382
+0=1
+1=1
+2=1
