--- a/GHISLER/WINCMD.INI
+++ b/GHISLER/WINCMD.INI
@@ -211,3 +211,12 @@ RedirectSection=CONFIG/Alias.ini
 
 
 
+[SyncOptions]
+DeleteEmptyFolders_L=%commander_path%\DeleteEmptyFolders\
+DeleteEmptyFolders_Wcs=|*\
+DeleteEmptyFolders_Flags=25|63|6
+
+
+[CompareCustomField]
+0exts=>Find Empty Directory
+0fields=emp
