--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -96,3 +96,14 @@ menu=Open Everything
 button=C:\Program Files\totalcmd\ini\icons dll\backup 02.ico
 cmd=c:\Program Files\totalcmd\ini\backup.cmd bing
 menu=Backup Bing to Photo
+
+[em_DeleteEmptyFolder]
+button=C:\Program Files\totalcmd\ini\icons dll\local.ico
+cmd="c:\Program Files\totalcmd\delfolder.cmd"
+menu=Delete empty directory from source path
+param=""%B""
+
+
+[em_search_CurrDirOnly]
+CMD= LOADSEARCH search_CurrDirOnly
+PARAM=
