--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -16,8 +16,8 @@ AutoViewMode=1
 
 
 [right]
-path=d:\02_Book\
-ViewMode=-1
+path=d:\09_hardRain\08_ihanseol - 2023\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -77,6 +77,5 @@ activelocked=1
 2_options=1|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-4_path=d:\09_hardRain\08_ihanseol - 2023\
-4_options=1|0|0|0|0|1|0|
-activetab=5
+activetab=4
+activelocked=1
