--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -30,7 +30,7 @@ menu=open folder
 
 
 [em_Youtube1080]
-button=C:\Program Files\totalcmd\RunAsTool\10_YoutubeDL\youtube-dl.exe
+button=C:\Program Files\totalcmd\ini\icons dll\icl\minhwasoo.icl,20
 cmd=d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG\youtube-dl-Video-MP4-MaxSize.cmd
 menu=YotubeMax
 
@@ -93,17 +93,18 @@ menu=Open Everything
 
 
 [em_bing]
-button=C:\Program Files\totalcmd\ini\icons dll\backup 02.ico
+button=C:\Program Files\totalcmd\ini\icons dll\minhwasoo.icl,6
 cmd=c:\Program Files\totalcmd\ini\backup.cmd bing
 menu=Backup Bing to Photo
 
+
 [em_DeleteEmptyFolder]
-button=C:\Program Files\totalcmd\ini\icons dll\local.ico
-cmd="c:\Program Files\totalcmd\delfolder.cmd"
+button=C:\Program Files\totalcmd\ini\icons dll\minhwasoo.icl,13
+cmd=c:\Program Files\totalcmd\delfolder.cmd
 menu=Delete empty directory from source path
 param=""%B""
 
 
 [em_search_CurrDirOnly]
-CMD= LOADSEARCH search_CurrDirOnly
-PARAM=
+CMD=LOADSEARCH search_CurrDirOnly
+button=C:\Program Files\totalcmd\ini\icons dll\oxy-gnome4TCv2.icl,34
