--- a/GHISLER/CONFIG/Selection.ini
+++ b/GHISLER/CONFIG/Selection.ini
@@ -1,21 +1,21 @@
 [Selection]
-0=|*\
-1=|*
-2=*.*
-3=*.mun
-4=*.dll
-5=*.exe
-6=jpg,jpeg
-7=*.icc
-8=*.ktw
-9=p*
-10=profile*
-11=setup*.dll
-12=*.hgl
-13=*.jpg
-14=*.png
-15=*.cpl
-16=*.msc
-17=shell*
-18=shell
-19=User
+0=*.*
+1=*.bar
+2=*.ico
+3=*.icl
+4=|*\
+5=|*
+6=*.mun
+7=*.dll
+8=*.exe
+9=jpg,jpeg
+10=*.icc
+11=*.ktw
+12=p*
+13=profile*
+14=setup*.dll
+15=*.hgl
+16=*.jpg
+17=*.png
+18=*.cpl
+19=*.msc
