--- a/GHISLER/CONFIG/CustomFields.ini
+++ b/GHISLER/CONFIG/CustomFields.ini
@@ -1,31 +1,35 @@
 [CustomFields]
 AutoLoad=0
 
-Widths1=530,38,-42,71,42
+Widths1=530,69,-42,71,42
 Headers1=size\ndate\nattributes
 Contents1=[=tc.size.bkMG]\n[=tc.writedate]\n[=tc.attributestr]
 Options1=2544|0|96
-Titles=default|size comment|comment|size, comment|size
+Titles=default|sublimeExt|size comment|comment|size, comment|size
 
-Widths2=200,30,-80,80
-Headers2=Size\nComment
-Contents2=[=tc.size]\n[=tc.comment]
-Options2=-1|0|96
+Widths2=530,69,-42,71,42
+Headers2=size\ndate\nattributes
+Contents2=[=tc.size.bkMG]\n[=tc.writedate]\n[=tc.attributestr]
+Options2=2544|0|96
 
-Widths3=80,30,80
-Headers3=comment
-Contents3=[=tc.comment]
+Widths3=200,30,-80,80
+Headers3=Size\nComment
+Contents3=[=tc.size]\n[=tc.comment]
 Options3=-1|0|96
 
-Widths4=228,30,-74,49
-Headers4=size\ncomment
-Contents4=[=tc.size]\n[=tc.comment]
+Widths4=80,30,80
+Headers4=comment
+Contents4=[=tc.comment]
 Options4=-1|0|96
 
-Widths5=80,30,-80
-Headers5=size
-Contents5=[=tc.size]
+Widths5=228,30,-74,49
+Headers5=size\ncomment
+Contents5=[=tc.size]\n[=tc.comment]
 Options5=-1|0|96
 
 
 
+Widths6=80,30,-80
+Headers6=size
+Contents6=[=tc.size]
+Options6=-1|0|96
