--- a/GHISLER/CONFIG/Rename.ini
+++ b/GHISLER/CONFIG/Rename.ini
@@ -18,8 +18,9 @@ Number Non Zero_params=0|1|1|1
 
 
 [RenameTemplates]
-0=00_wdf_[N]
-1=[N]
+0=firewall-[C]
+1=00_wdf_[N]
+2=[N]
 
 
 [RenameSearchFind]
