--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -101,7 +101,7 @@ menu=Backup Bing to Photo
 [em_DeleteEmptyFolder]
 button=C:\Program Files\totalcmd\ini\icons dll\minhwasoo.icl,13
 cmd=c:\Program Files\totalcmd\delfolder.cmd
-menu=Delete empty directory from source path
+menu=Delete Empty Folder
 param=""%B""
 
 
