--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,7 +1,7 @@
 
 [left]
-path=d:\05_Send\
-ViewMode=0
+path=C:\Program Files\totalcmd\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -12,12 +12,11 @@ activepanelcolordark=-1
 activepanelcolordark2=-1
 userspec=*.*
 customsortorder=0
-AutoViewMode=1
 
 
 [right]
-path=d:\09_hardRain\08_ihanseol - 2023\
-ViewMode=0
+path=C:\Program Files\totalcmd\ini\config\Bar FIle\original file\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -66,8 +65,9 @@ XPstyle=1
 3_options=1|0|0|0|0|1|0|
 4_path=c:\Users\minhwasoo\Downloads\
 4_options=6|0|0|0|0|1|0|
-activetab=5
-activelocked=1
+5_path=d:\05_Send\
+5_options=6|0|0|0|0|1|0|||0|1
+activetab=6
 [righttabs]
 0_path=d:\11_exaData\
 0_options=1|0|0|0|0|1|0|
@@ -77,5 +77,6 @@ activelocked=1
 2_options=1|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-activetab=4
-activelocked=1
+4_path=d:\09_hardRain\08_ihanseol - 2023\
+4_options=1|0|0|0|0|1|0|
+activetab=5
