--- a/GHISLER/CONFIG/ButtonbarCache.ini
+++ b/GHISLER/CONFIG/ButtonbarCache.ini
@@ -3,7 +3,8 @@
 IconDll_vertical.bar=TCNewLib1
 IconDll_default.bar=TCNewLib1
 IconDll_subbar1.bar=TCNewLib1
-IconDll_VERTICAL1.BAR=TCNewLib1
+IconDll_VERTICAL1.BAR=
 
 
 
+IconDll_subbar2.bar=TCNewLib1
