--- a/GHISLER/CONFIG/Rename.ini
+++ b/GHISLER/CONFIG/Rename.ini
@@ -18,9 +18,10 @@ Number Non Zero_params=0|1|1|1
 
 
 [RenameTemplates]
-0=firewall-[C]
-1=00_wdf_[N]
-2=[N]
+0=folder[C]
+1=firewall-[C]
+2=00_wdf_[N]
+3=[N]
 
 
 [RenameSearchFind]
