--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -108,3 +108,13 @@ param=""%B""
 [em_search_CurrDirOnly]
 CMD=LOADSEARCH search_CurrDirOnly
 button=C:\Program Files\totalcmd\ini\icons dll\oxy-gnome4TCv2.icl,34
+
+
+[em_SearchVirusTotal]
+button=C:\Program Files (x86)\VirusTotalUploader2\VirusTotalUploader2.2.exe
+cmd=C:\Program Files (x86)\VirusTotalUploader2\VirusTotalUploader2.2.exe
+menu=VirusTotal Check
+param=""%P\%N""
+
+
+
