--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,6 +1,6 @@
 
 [left]
-path=C:\Program Files\totalcmd\
+path=c:\Users\minhwasoo\Downloads\Compressed\
 ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -15,7 +15,7 @@ customsortorder=0
 
 
 [right]
-path=C:\Program Files\totalcmd\ini\config\Bar FIle\original file\
+path=d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\TC Utils\
 ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
