--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -28,37 +28,38 @@ EmptyCheck_plugin=emptycheck.Empty = 1
 
 
 [SearchName]
-0=아오하
-1=ipython
-2=.bashrc
-3=debug
-4=profile
-5=run_profile_d*.*
-6=run_profile_d
-7=flow
-8=타자
-9=타바
-10=TCNewLib1
-11=ico
+0=filemenu
+1=아오하
+2=ipython
+3=.bashrc
+4=debug
+5=profile
+6=run_profile_d*.*
+7=run_profile_d
+8=flow
+9=타자
+10=타바
+11=TCNewLib1
+12=ico
 
 [SearchIn]
-0=z:\11_exaData\04_dev
-1=y:\A1_exaVideo
-2=d:\09_hardRain\08_ihanseol - 2023
-3=d:\02_Book
-4=z:\11_exaData\03_Design
-5=z:\11_exaData\05_OS
-6=z:\11_exaData\08_Microsoft Office
-7=z:\11_exaData\07_Font
-8=z:\11_exaData\06_util
-9=z:\09_hardRain\A1_jeong_cheon
-10=z:\09_hardRain\07_ihanseol - 2022
-11=z:\09_hardRain\06_ihanseol - 2021
-12=z:\09_hardRain\05_ihanseol - 2020
-13=z:\09_hardRain\04_ihanseol - 2019
-14=z:\09_hardRain\03_ihanseol - 2018
-15=z:\09_hardRain\02_ihanseol - 2017
-16=z:\09_hardRain\01_2017
-17=d:\11_exaData\05_OS
-18=f:\11_exaData\04_dev
-19=d:\11_exaData\04_dev
+0=d:\11_exaData\06_util
+1=z:\11_exaData\04_dev
+2=y:\A1_exaVideo
+3=d:\09_hardRain\08_ihanseol - 2023
+4=d:\02_Book
+5=z:\11_exaData\03_Design
+6=z:\11_exaData\05_OS
+7=z:\11_exaData\08_Microsoft Office
+8=z:\11_exaData\07_Font
+9=z:\11_exaData\06_util
+10=z:\09_hardRain\A1_jeong_cheon
+11=z:\09_hardRain\07_ihanseol - 2022
+12=z:\09_hardRain\06_ihanseol - 2021
+13=z:\09_hardRain\05_ihanseol - 2020
+14=z:\09_hardRain\04_ihanseol - 2019
+15=z:\09_hardRain\03_ihanseol - 2018
+16=z:\09_hardRain\02_ihanseol - 2017
+17=z:\09_hardRain\01_2017
+18=d:\11_exaData\05_OS
+19=f:\11_exaData\04_dev
