--- a/GHISLER/CONFIG/Shortcuts.ini
+++ b/GHISLER/CONFIG/Shortcuts.ini
@@ -14,8 +14,13 @@ A+E=cm_Edit
 A+Q=cm_SearchFor
 CA+Q=em_startTCQSP
 
+
 A+V=cm_SrcThumbs
+
+; Packing Unpacking File
 A+A=cm_PackFiles
+A+X=em_UnpackFiles
+
 
 S+UP=cm_GoToFirstFile
 S+LEFT=cm_GotoPreviousDrive
@@ -51,7 +56,6 @@ CA+F6=em_FastMove
 CA+F=em_AgentRanSack
 CS+F=em_grepWin
 CS+V=em_SearchVirusTotal
-
 
 
 [ShortcutsWin]
