--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -117,4 +117,10 @@ menu=VirusTotal Check
 param=""%P\%N""
 
 
+[em_UnpackFiles]
+button=c:\Program Files\WinRAR\WinRAR.exe
+cmd=c:\Program Files\WinRAR\WinRAR.exe x
+param=%p%n -op %t\
+menu=Unpack to Folder
+
 
