--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -64,9 +64,9 @@ menu34=11_exaData
 cmd34=cd d:\11_exaData
 menu35=05_WSH
 cmd35=cd d:\11_exaData\05_OS\05_WSH
-menu36=06_util
+menu36=06_Utility
 cmd36=cd d:\11_exaData\06_util
-menu37=016_dev tool
+menu37=016_Dev Tool
 cmd37=cd d:\11_exaData\06_util\016_dev tool
 menu38=010_ZZATURI
 cmd38=cd d:\11_exaData\06_util\010_ZZATURI
