--- a/GHISLER/CONFIG/Selection.ini
+++ b/GHISLER/CONFIG/Selection.ini
@@ -1,21 +1,22 @@
 [Selection]
-0=*.png
-1=*.*
-2=*.bar
-3=*.ico
-4=*.icl
-5=|*\
-6=|*
-7=*.mun
-8=*.dll
-9=*.exe
-10=jpg,jpeg
-11=*.icc
-12=*.ktw
-13=p*
-14=profile*
-15=setup*.dll
-16=*.hgl
-17=*.jpg
-18=*.cpl
-19=*.msc
+0=*.ttf
+1=*.txt
+2=*.otf
+3=*.*
+4=*.png
+5=*.bar
+6=*.ico
+7=*.icl
+8=|*\
+9=|*
+10=*.mun
+11=*.dll
+12=*.exe
+13=jpg,jpeg
+14=*.icc
+15=*.ktw
+16=p*
+17=profile*
+18=setup*.dll
+19=*.hgl
+20=*.jpg
