--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -119,7 +119,7 @@ param=""%P\%N""
 
 [em_UnpackFiles]
 button=c:\Program Files\WinRAR\WinRAR.exe
-cmd=c:\Program Files\WinRAR\WinRAR.exe x
+cmd=c:\Program Files\WinRAR\WinRAR.exe x -Y 
 param=%p%n -op %t\
 menu=Unpack to Folder
 
