--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,7 +1,7 @@
 
 [left]
-path=c:\Users\minhwasoo\Downloads\Compressed\
-ViewMode=-1
+path=d:\05_Send\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -12,11 +12,12 @@ activepanelcolordark=-1
 activepanelcolordark2=-1
 userspec=*.*
 customsortorder=0
+AutoViewMode=1
 
 
 [right]
-path=d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\TC Utils\
-ViewMode=-1
+path=d:\09_hardRain\08_ihanseol - 2023\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -62,12 +63,11 @@ XPstyle=1
 2_path=c:\Users\minhwasoo\Desktop\
 2_options=6|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\
-3_options=1|0|0|0|0|1|0|
+3_options=6|0|0|0|0|1|0|
 4_path=c:\Users\minhwasoo\Downloads\
 4_options=6|0|0|0|0|1|0|
-5_path=d:\05_Send\
-5_options=6|0|0|0|0|1|0|||0|1
-activetab=6
+activetab=5
+activelocked=1
 [righttabs]
 0_path=d:\11_exaData\
 0_options=1|0|0|0|0|1|0|
@@ -77,6 +77,5 @@ activetab=6
 2_options=1|0|0|0|0|1|0|
 3_path=c:\Users\minhwasoo\Downloads\
 3_options=1|0|0|0|0|1|0|
-4_path=d:\09_hardRain\08_ihanseol - 2023\
-4_options=1|0|0|0|0|1|0|
-activetab=5
+activetab=4
+activelocked=1
