--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -28,31 +28,32 @@ EmptyCheck_plugin=emptycheck.Empty = 1
 
 
 [SearchName]
-0=filemenu
-1=아오하
-2=ipython
-3=.bashrc
-4=debug
-5=profile
-6=run_profile_d*.*
-7=run_profile_d
-8=flow
-9=타자
-10=타바
-11=TCNewLib1
-12=ico
+0=launcher
+1=filemenu
+2=아오하
+3=ipython
+4=.bashrc
+5=debug
+6=profile
+7=run_profile_d*.*
+8=run_profile_d
+9=flow
+10=타자
+11=타바
+12=TCNewLib1
+13=ico
 
 [SearchIn]
-0=d:\11_exaData\06_util
-1=z:\11_exaData\04_dev
-2=y:\A1_exaVideo
-3=d:\09_hardRain\08_ihanseol - 2023
-4=d:\02_Book
-5=z:\11_exaData\03_Design
-6=z:\11_exaData\05_OS
-7=z:\11_exaData\08_Microsoft Office
-8=z:\11_exaData\07_Font
-9=z:\11_exaData\06_util
+0=z:\11_exaData\06_util
+1=d:\11_exaData\06_util
+2=z:\11_exaData\04_dev
+3=y:\A1_exaVideo
+4=d:\09_hardRain\08_ihanseol - 2023
+5=d:\02_Book
+6=z:\11_exaData\03_Design
+7=z:\11_exaData\05_OS
+8=z:\11_exaData\08_Microsoft Office
+9=z:\11_exaData\07_Font
 10=z:\09_hardRain\A1_jeong_cheon
 11=z:\09_hardRain\07_ihanseol - 2022
 12=z:\09_hardRain\06_ihanseol - 2021
